--- a/wholesaler.html
+++ b/wholesaler.html
@@ -108,6 +108,16 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   cursor:pointer;
   font-size:13px;
  }
+ .modal-content {
+  position: relative;
+}
+
+.modal-content .fixed-close {
+  position: sticky;
+  bottom: 0;
+  background: #fff;
+  padding-top: 10px;
+}
 </style>  </head>  <body>    
 <div class="main">    <div class="icon-bar">    
     <button class="icon-btn" onclick="openProfile()"><i class="bi bi-shop"></i></button>    
