--- a/wholesaler.html
+++ b/wholesaler.html
@@ -193,7 +193,20 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
  <div class="modal-content">    
   <h3>Orders</h3>    
   <div id="orders"></div>    
-  <button onclick="closeAll()">Close</button>    
+  <div class="fixed-close">
+  <button onclick="closeAll()" style="
+    width:100%;
+    padding:10px;
+    border:none;
+    border-radius:10px;
+    background:#2563eb;
+    color:#fff;
+    font-size:14px;
+    cursor:pointer;
+  ">
+    Close
+  </button>
+</div>    
  </div>    
 </div>  
  <!-- PRODUCT DETAIL -->
