--- a/retailer.html
+++ b/retailer.html
@@ -391,6 +391,41 @@ color: #16a34a;
 padding-left: 6px;
 border-radius: 4px;
 }
+  /* ===== ORDER STATUS FIX ===== */
+
+.order-status-box{
+  padding:0;                 /* header ke liye */
+  max-height:85vh;
+  display:flex;
+  flex-direction:column;
+}
+
+/* 🔒 Header fixed */
+.order-status-header{
+  position: sticky;
+  top: 0;
+  background: #fff;
+  z-index: 10;
+  padding: 14px 16px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  border-bottom:1px solid #eee;
+}
+
+/* ❌ Close icon */
+.order-close{
+  font-size:20px;
+  cursor:pointer;
+  color:#ef4444;
+}
+
+/* 🔁 Sirf content scroll hoga */
+.order-status-scroll{
+  flex:1;
+  overflow-y:auto;
+  padding:16px;
+}
 </style>
 
 </head>    
