--- a/retailer.html
+++ b/retailer.html
@@ -426,6 +426,56 @@ border-radius: 4px;
   overflow-y:auto;
   padding:16px;
 }
+  /* ===== DELIVERY MODAL FIX ===== */
+
+.delivery-box{
+  padding:0;
+  max-height:85vh;
+  display:flex;
+  flex-direction:column;
+}
+
+/* 🔒 Header fixed */
+.delivery-header{
+  position:sticky;
+  top:0;
+  background:#fff;
+  z-index:10;
+  padding:14px 16px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom:1px solid #eee;
+}
+
+.delivery-header h3{
+  margin:0;
+  font-size:16px;
+}
+
+/* ❌ Close icon */
+.delivery-close{
+  font-size:20px;
+  cursor:pointer;
+  color:#ef4444;
+}
+
+/* 🔁 Scrollable content */
+.delivery-scroll{
+  flex:1;
+  overflow-y:auto;
+  padding:16px;
+}
+
+/* 🔒 Footer fixed */
+.delivery-footer{
+  position:sticky;
+  bottom:0;
+  background:#fff;
+  padding:12px;
+  border-top:1px solid #eee;
+  text-align:center;
+}
 </style>
 
 </head>    
@@ -547,13 +597,25 @@ border-radius: 4px;
     <div id="orderStatusData" class="order-status-scroll"></div>
 
   </div>    
-</div>    <!-- DELIVERY DETAILS -->    <div class="modal" id="deliveryModal">    
-  <div class="modal-content">    
-    <h3 style="text-align:center;margin-bottom:15px">🚚 Delivery Details</h3>    
-    <div id="deliveryData"></div>    
-    <button class="primary" onclick="closeAll()">Close</button>    
-  </div>    
-</div>    
+</div>    <!-- DELIVERY DETAILS -->    <div class="modal" id="deliveryModal">
+  <div class="modal-content delivery-box">
+
+    <!-- 🔒 FIXED HEADER -->
+    <div class="delivery-header">
+      <h3>🚚 Delivery Details</h3>
+      <span class="delivery-close" onclick="closeAll()">✖</span>
+    </div>
+
+    <!-- 🔁 SCROLL AREA -->
+    <div id="deliveryData" class="delivery-scroll"></div>
+
+    <!-- 🔒 FIXED FOOTER (optional close button) -->
+    <div class="delivery-footer">
+      <button class="primary" onclick="closeAll()">Close</button>
+    </div>
+
+  </div>
+</div>
 <!-- FULL IMAGE VIEW -->    
 <div class="modal" id="imageModal">    
   <div class="modal-content" style="padding:10px;background:#000">    
