--- a/wholesaler.html
+++ b/wholesaler.html
@@ -118,6 +118,33 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   background: #fff;
   padding-top: 10px;
 }
+ .badge{
+  display:inline-block;
+  padding:3px 8px;
+  border-radius:8px;
+  font-size:11px;
+  font-weight:600;
+}
+
+.badge.cart{
+  background:#ede9fe;
+  color:#5b21b6;
+}
+
+.badge.paid{
+  background:#dbeafe;
+  color:#1d4ed8;
+}
+
+.badge.assigned{
+  background:#dcfce7;
+  color:#166534;
+}
+
+.badge.delivered{
+  background:#f0fdf4;
+  color:#15803d;
+}
 </style>  </head>  <body>    
 <div class="main">    <div class="icon-bar">    
     <button class="icon-btn" onclick="openProfile()"><i class="bi bi-shop"></i></button>    
