--- a/delivery.html
+++ b/delivery.html
@@ -82,6 +82,10 @@ body{margin:0;background:#eef2f7}
   background:#f8fafc;
   font-size:13px;
 }
+  .badge.cart{
+  background:#ede9fe;
+  color:#5b21b6;
+  }
 </style>  </head>  <body>  <div class="main">    <div class="top">  
     <h3>🚚 Delivery Partner</h3>  
     <button class="icon-btn" onclick="openProfile()">  
