--- a/wholesaler.html
+++ b/wholesaler.html
@@ -348,6 +348,39 @@ function formatDateTime(ts) {
   // ⚠️ LAST OPTION: ask user later
   console.warn("❌ Wholesaler location missing — ask user to set it");
   }
+
+  function groupOrdersByCart(orders){
+  const map = {};
+
+  orders.forEach(o=>{
+    const key = o.cartGroupId || o._id;
+
+    if(!map[key]){
+      map[key] = {
+        key,
+        isCart: !!o.cartGroupId,
+        status: o.status,
+        time: o.statusHistory?.[0]?.time || o.createdAt,
+        retailerName: o.retailerName,
+        retailerMobile: o.retailerMobile,
+        vehicleType: o.vehicleType,
+        deliveryBoyId: o.deliveryBoyId,
+        products: []
+      };
+    }
+
+    map[key].products.push(o);
+  });
+
+  return Object.values(map);
+  }
+  function getStatusHTML(status){
+  if(status==="pending")  return `<span style="color:#dc2626">PENDING</span>`;
+  if(status==="paid")     return `<span style="color:#2563eb">PAID</span>`;
+  if(status==="assigned") return `<span style="color:#16a34a">ASSIGNED</span>`;
+  if(status==="delivered")return `<span style="color:#15803d">DELIVERED</span>`;
+  return `<span>${status}</span>`;
+  }
   
   async function openProfile(){
 
@@ -841,83 +874,59 @@ async function loadOrders(){
   const r = await fetch(API + "/api/orders/wholesaler/" + WID);
   const d = await r.json();
 
-  if (!d.orders || !d.orders.length) {
+  if(!d.orders || !d.orders.length){
     orders.innerHTML = "No orders";
     return;
   }
 
-  orders.innerHTML = d.orders.map(o => {
+  const grouped = groupOrdersByCart(d.orders);
 
-    /* ===== STATUS TEXT + COLOR LOGIC ===== */
-    let statusText = o.status;
-    let statusClass = "paid";
+  orders.innerHTML = grouped.map(g=>`
+    <div class="card">
 
-    if (o.isCartOrder) {
-      statusText = "🛒 Cart Order (Multiple Items)";
-      statusClass = "cart";
-    }
-    else if (o.status === "pending") {
-      statusText = "Pending";
-      statusClass = "pending";
-    }
-    else if (o.status === "paid") {
-      statusText = "Paid";
-      statusClass = "paid";
-    }
-    else if (o.status === "assigned") {
-      statusText = "Delivery Assigned";
-      statusClass = "assigned";
-    }
-    else if (o.status === "delivered") {
-      statusText = "Delivered";
-      statusClass = "delivered";
-    }
+      <b>
+        ${g.isCart ? "🛒 Cart Order" : "📦 Order"}
+      </b><br>
 
-    return `
-      <div class="card">
-        <b>${o.productName}</b> ₹${o.price}<br>
-
-        🏬 Retailer Shop: ${o.retailerName}<br>
-        📞 ${o.retailerMobile}<br>
-
-        🚚 Vehicle: ${o.vehicleType || "Not assigned"}<br>
-
-        <div class="status" style="margin-top:6px">
-          Status:
-          <span class="badge ${statusClass}">
-            ${statusText}
-          </span><br>
-          🕒 ${formatDateTime(
-            o.statusHistory?.[0]?.time || o.createdAt
-          )}
-        </div>
-
-        ${
-          o.status === "pending"
-          ? `
-            <button class="success"
-              onclick="confirmOrder('${o._id}')"
-              style="display:flex;align-items:center;gap:6px;margin-top:8px">
-              <i class="bi bi-check-circle-fill"></i>
-              Confirm Order
-            </button>
-          `
-          : o.status === "assigned"
-          ? `
-            <div style="margin-top:8px;color:#16a34a;font-size:13px">
-              ✅ Assigned to Delivery Boy<br>
-              👤 Delivery ID: ${o.deliveryBoyId || "N/A"}
-            </div>
-          `
-          : `
-            <div style="margin-top:8px;color:#2563eb;font-size:13px">
-              📦 ${statusText}
-            </div>
-          `
-        }
+      <div class="status">
+        Status: <b>${getStatusHTML(g.status)}</b><br>
+        🕒 ${new Date(g.time).toLocaleString()}
       </div>
-    `;
-  }).join("");
+
+      <hr>
+
+      <b>📦 Products:</b>
+      <ul>
+        ${g.products.map(p=>`
+          <li>${p.productName} — ₹${p.price}</li>
+        `).join("")}
+      </ul>
+
+      <hr>
+
+      🏬 <b>Retailer:</b> ${g.retailerName}<br>
+      📞 ${g.retailerMobile}<br><br>
+
+      🚚 <b>Vehicle:</b> ${g.vehicleType || "Not assigned"}<br>
+
+      ${
+        g.status==="pending"
+        ? `<button class="success"
+             onclick="confirmOrder('${g.key}')">
+             Confirm Order
+           </button>`
+        : g.status==="assigned"
+        ? `<div style="color:#16a34a;font-size:13px">
+            ✅ Assigned to Delivery Boy<br>
+            👤 Delivery ID: ${g.deliveryBoyId || "N/A"}
+           </div>`
+        : `<div style="color:#2563eb;font-size:13px">
+            📦 ${g.status}
+           </div>`
+      }
+
+    </div>
+  `).join("");
 }
 
 loadCategories();
