--- a/wholesaler.html
+++ b/wholesaler.html
@@ -899,64 +899,64 @@ async function loadOrders(){
   const r = await fetch(API + "/api/orders/wholesaler/" + WID);
   const d = await r.json();
 
-  if (!d.orders || !d.orders.length) {
+  if(!d.orders || !d.orders.length){
     orders.innerHTML = "No orders";
     return;
   }
 
-  orders.innerHTML = d.orders.map(o => {
+  const grouped = groupOrdersByCart(d.orders);
 
-    // 🔥 ORDER TYPE
-    let orderTypeClass = o.cartGroupId ? "cart-order" : "direct-order";
+  orders.innerHTML = grouped.map(g=>`
+    <div class="card 
+      ${g.isCart ? "cart-order" : "direct-order"} 
+      ${g.status === "assigned" ? "assigned" : ""} 
+      ${g.status === "delivered" ? "delivered" : ""}
+    ">
 
-    // 🔥 STATUS CLASS
-    let statusClass = "";
-    if(o.status === "assigned") statusClass = "assigned";
-    if(o.status === "delivered") statusClass = "delivered";
+      <b>
+        ${g.isCart ? "🛒 Cart Order" : "📦 Order"}
+      </b><br>
 
-    return `
-      <div class="card ${orderTypeClass} ${statusClass}">
-        <b>${o.productName}</b> ₹${o.price}<br>
-
-        🏬 Retailer: ${o.retailerName}<br>
-        📞 ${o.retailerMobile}<br>
-
-        🚚 Vehicle: ${o.vehicleType || "Not assigned"}<br>
-
-        <div class="status">
-          Status: <b>${o.status}</b><br>
-          🕒 ${formatDateTime(
-            o.statusHistory?.[0]?.time || o.createdAt
-          )}
-        </div>
-
-        ${
-          o.status === "pending"
-          ? `
-            <button class="success"
-              onclick="confirmOrder('${o._id}')">
-              <i class="bi bi-check-circle-fill"></i>
-              Confirm Order
-            </button>
-          `
-          : o.status === "assigned"
-          ? `
-            <div style="margin-top:6px;color:#2563eb;font-size:13px">
-              🚚 Assigned to Delivery Boy<br>
-              👤 ID: ${o.deliveryBoyId || "N/A"}
-            </div>
-          `
-          : `
-            <div style="margin-top:6px;color:#16a34a;font-size:13px">
-              📦 ${o.status}
-            </div>
-          `
-        }
+      <div class="status">
+        Status: <b>${getStatusHTML(g.status)}</b><br>
+        🕒 ${new Date(g.time).toLocaleString()}
       </div>
-    `;
-  }).join("");
-}
 
+      <hr>
+
+      <b>📦 Products:</b>
+      <ul>
+        ${g.products.map(p=>`
+          <li>${p.productName} — ₹${p.price}</li>
+        `).join("")}
+      </ul>
+
+      <hr>
+
+      🏬 <b>Retailer:</b> ${g.retailerName}<br>
+      📞 ${g.retailerMobile}<br><br>
+
+      🚚 <b>Vehicle:</b> ${g.vehicleType || "Not assigned"}<br>
+
+      ${
+        g.status==="pending"
+        ? `<button class="success"
+             onclick="confirmOrder('${g.key}')">
+             Confirm Order
+           </button>`
+        : g.status==="assigned"
+        ? `<div style="color:#2563eb;font-size:13px">
+            🚚 Assigned to Delivery Boy<br>
+            👤 Delivery ID: ${g.deliveryBoyId || "N/A"}
+           </div>`
+        : `<div style="color:#16a34a;font-size:13px">
+            📦 ${g.status}
+           </div>`
+      }
+
+    </div>
+  `).join("");
+}
 loadCategories();
 loadCategoriesSelect();
 </script> 
