--- a/wholesaler.html
+++ b/wholesaler.html
@@ -147,18 +147,17 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 }
  /* ===== ORDER TYPE COLORS ===== */
 
-/* Direct Buy (default) */
+/* ⚪ Direct Order — soft cool gray */
 .card.direct-order{
-  background:#ffffff; /* ⚪ white */
-  border-left:4px solid #e5e7eb;
+  background:#f8fafc;          /* light cool gray */
+  border-left:4px solid #cbd5e1;
 }
 
-/* Cart Order */
+/* 🟠 Cart Order — warm cream / light amber */
 .card.cart-order{
-  background:#fff7ed; /* 🟠 light orange */
+  background:#fff1e6;          /* soft peach */
   border-left:4px solid #fb923c;
 }
-
 /* Status: Assigned */
 .card.assigned{
   background:#eff6ff; /* 🔵 light blue */
