--- a/wholesaler.html
+++ b/wholesaler.html
@@ -149,8 +149,8 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 
 /* ⚪ Direct Order — soft cool gray */
 .card.direct-order{
-  background:#f8fafc;          /* light cool gray */
-  border-left:4px solid #cbd5e1;
+  background:#eef2f7;          /* visible light gray-blue */
+  border-left:4px solid #94a3b8;
 }
 
 /* 🟠 Cart Order — warm cream / light amber */
